// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should allow custom checked Icon 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedColor="#2089dc"
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <CheckBoxIcon
      center={false}
      checked={true}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should allow custom checked Icon 2`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedColor="#2089dc"
  checkedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/jcY95H/checked.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
  size={24}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon={
    <Image
      source={
        Object {
          "uri": "https://image.ibb.co/fda0Cx/no_check.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/jcY95H/checked.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      uncheckedColor="#bfbfbf"
      uncheckedIcon={
        <Image
          source={
            Object {
              "uri": "https://image.ibb.co/fda0Cx/no_check.png",
            }
          }
          style={
            Object {
              "height": 30,
              "width": 30,
            }
          }
        />
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and checked 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedColor="red"
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="red"
      checkedIcon="check-square-o"
      component={[Function]}
      containerStyle={
        Object {
          "backgroundColor": "red",
        }
      }
      iconRight={false}
      iconType="font-awesome"
      right={false}
      size={24}
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedColor="#2089dc"
  checkedIcon="check-square-o"
  iconType="font-awesome"
  size={24}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
  uncheckedColor="blue"
  uncheckedIcon="square-o"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <CheckBoxIcon
      center={true}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      component={[Function]}
      iconRight={true}
      iconType="font-awesome"
      right={true}
      size={24}
      uncheckedColor="blue"
      uncheckedIcon="square-o"
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render without issues 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  checkedColor="#2089dc"
  checkedIcon="check-square-o"
  size={24}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
  uncheckedColor="#bfbfbf"
  uncheckedIcon="square-o"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <CheckBoxIcon
      center={false}
      checked={false}
      checkedColor="#2089dc"
      checkedIcon="check-square-o"
      component={[Function]}
      iconRight={false}
      right={false}
      size={24}
      uncheckedColor="#bfbfbf"
      uncheckedIcon="square-o"
    />
  </View>
</TouchableOpacity>
`;
